fix: layer info pane was too wide

--- a/modules/layerInformation/style.less
+++ b/modules/layerInformation/style.less
@@ -33,6 +33,7 @@
     top: 20px;
     right: 60px;
     width: 45vw;
+    max-width:600px;
     margin: 60px 10px 30px 10px;
     z-index: 1010;
     background-color: @background_color_2;
